styles for large screens

--- a/src/index.html
+++ b/src/index.html
@@ -16,23 +16,64 @@
   </head>
   <body>
     <!-- first section: landing page -->
-    <div class="pb-6 bg-mineral-600 flex flex-col">
+    <div
+      class="
+        pb-6
+        bg-mineral-600
+        flex flex-col
+        lg:grid lg:grid-cols-5 lg:justify-items-center
+      "
+    >
       <!-- name and greeting -->
-      <div class="flex flex-col flex-grow">
-        <h1 class="py-3 text-2xl text-center flex-shrink">Hello there!</h1>
-        <div class="flex flex-row flex-grow justify-center items-center">
+      <div
+        class="
+          flex flex-col flex-grow
+          lg:col-span-2 lg:items-center lg:justify-center lg:gap-6
+        "
+      >
+        <h1
+          class="
+            py-3
+            text-2xl text-center
+            flex-shrink
+            lg:flex-shrink-0 lg:text-4xl
+          "
+        >
+          Hello there!
+        </h1>
+        <div
+          class="
+            flex flex-row flex-grow
+            lg:flex-grow-0
+            justify-center
+            items-center
+          "
+        >
           <div class="px-6 text-right">
             <h3 class="text-sm sm:text-3xl">Jack DeVries</h3>
             <h4 class="text-sm sm:text-base">Web & Software Developer</h4>
           </div>
-          <div class="w-24 p-2 bg-primary-100 rounded-full shadow">
+          <div class="w-24 lg:w-48 p-2 bg-primary-100 rounded-full shadow">
             <img class="rounded-full" src="./static/me@400px.jpg" />
           </div>
         </div>
       </div>
 
       <!-- tech icons -->
-      <div class="flex-shrink max-w-lg m-auto">
+      <div
+        class="
+          flex-shrink
+          max-w-lg
+          m-auto
+          lg:col-span-3
+          lg:bg-coffee
+          lg:border-2
+          lg:border-primary-200
+          lg:m-4
+          lg:p-4
+          lg:rounded
+        "
+      >
         <h2 class="text-center text-xl pb-2">My Toolbox</h2>
         <div
           class="grid grid-cols-3 mx-3 gap-2 items-center justify-items-center"
@@ -113,7 +154,17 @@
     <!-- second section: projects -->
     <div class="py-6 bg-secondary-700">
       <h1 class="text-primary-500 text-center">My Projects</h1>
-      <div class="m-auto container flex flex-col items-center p-4 gap-4">
+      <div
+        class="
+          lg:grid lg:grid-cols-3 lg:items-start
+          m-auto
+          container
+          flex flex-col
+          items-center
+          p-4
+          gap-4
+        "
+      >
         <!-- begin fast grader card -->
         <div class="max-w-prose bg-clay-100 w-full rounded-md">
           <div>
@@ -500,7 +551,7 @@
                 hover:shadow-none
               "
             >
-              See More
+              Read More
             </button>
           </ul>
         </div>
@@ -542,131 +593,139 @@
     </div>
 
     <div class="py-6 bg-gradient-to-br from-primary-100 to-clay-100">
-      <div class="m-auto max-w-prose">
-        <div class="py-4 flex items-center justify-center">
-          <h1
-            class="text-mineral bg-clay-100 p-1 rounded shadow-lg inline-block"
-          >
-            I Am
-          </h1>
-        </div>
-        <!-- styled in css file -->
-        <div class="character-icons">
-          <div>
-            <svg fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z"
-              />
-            </svg>
-            <p>Creative</p>
-          </div>
-
-          <div>
-            <svg fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
-              />
-            </svg>
-            <p>Hard Working</p>
-          </div>
-          <div>
-            <svg fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M17.657 18.657A8 8 0 016.343 7.343S7 9 9 10c0-2 .5-5 2.986-7C14 5 16.09 5.777 17.656 7.343A7.975 7.975 0 0120 13a7.975 7.975 0 01-2.343 5.657z"
-              />
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M9.879 16.121A3 3 0 1012.015 11L11 14H9c0 .768.293 1.536.879 2.121z"
-              />
-            </svg>
-            <p>Passionate</p>
-          </div>
-          <div>
-            <svg fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M13 10V3L4 14h7v7l9-11h-7z"
-              />
-            </svg>
-            <p>Determined</p>
-          </div>
-          <div>
-            <svg fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M9 12l2 2 4-4M7.835 4.697a3.42 3.42 0 001.946-.806 3.42 3.42 0 014.438 0 3.42 3.42 0 001.946.806 3.42 3.42 0 013.138 3.138 3.42 3.42 0 00.806 1.946 3.42 3.42 0 010 4.438 3.42 3.42 0 00-.806 1.946 3.42 3.42 0 01-3.138 3.138 3.42 3.42 0 00-1.946.806 3.42 3.42 0 01-4.438 0 3.42 3.42 0 00-1.946-.806 3.42 3.42 0 01-3.138-3.138 3.42 3.42 0 00-.806-1.946 3.42 3.42 0 010-4.438 3.42 3.42 0 00.806-1.946 3.42 3.42 0 013.138-3.138z"
-              />
-            </svg>
-            <p>Perseverant</p>
-          </div>
-          <div>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="h-6 w-6"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke="currentColor"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M3 6l3 1m0 0l-3 9a5.002 5.002 0 006.001 0M6 7l3 9M6 7l6-2m6 2l3-1m-3 1l-3 9a5.002 5.002 0 006.001 0M18 7l3 9m-3-9l-6-2m0-2v2m0 16V5m0 16H9m3 0h3"
-              />
-            </svg>
-            <p>Honest</p>
-          </div>
-        </div>
-
-        <div class="bg-clay-100 inline-block shadow-md rounded-md m-1 p-1">
-          <p class="text-justify text-sm sm:text-base text-black">
-            Although I am new to the business, I have already spent a lot of
-            time working on software projects big and small. I know how to
-            navigate large codebases and make meaningful contributions to them.
-            I also have followed best-practices for my new projects, and I've
-            encountered software development methodologies in a hands-on way to
-            help me manage my own larger projects.
-          </p>
-          <p class="text-justify text-sm sm:text-base text-black">
-            Overall, I feel ready, and I hope that we can meet soon so that I
-            can show you that I am.
-          </p>
-        </div>
-        <div class="contact-form-container">
-          <div class="flex items-center justify-center w-full">
-            <button
-              hx-get="http://localhost:8001/api/contact"
-              hx-target=".contact-form-container"
+      <div class="container flex items-center justify-center m-auto">
+        <div class="max-w-prose">
+          <div class="py-4 flex items-center justify-center">
+            <h1
               class="
-                p-6
-                m-6
-                text-clay-100
-                font-bold
-                text-lg
-                rounded-md
-                bg-gradient-to-tr
-                from-purple-500
-                via-blue-500
-                to-purple-600
+                text-mineral
+                bg-clay-100
+                p-1
+                rounded
+                shadow-lg
+                inline-block
               "
             >
-              Contact Me
-            </button>
+              I Am
+            </h1>
+          </div>
+          <!-- styled in css file -->
+          <div class="character-icons m-2 p-2">
+            <div>
+              <svg fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z"
+                />
+              </svg>
+              <p>Creative</p>
+            </div>
+
+            <div>
+              <svg fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
+                />
+              </svg>
+              <p>Hard Working</p>
+            </div>
+            <div>
+              <svg fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M17.657 18.657A8 8 0 016.343 7.343S7 9 9 10c0-2 .5-5 2.986-7C14 5 16.09 5.777 17.656 7.343A7.975 7.975 0 0120 13a7.975 7.975 0 01-2.343 5.657z"
+                />
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M9.879 16.121A3 3 0 1012.015 11L11 14H9c0 .768.293 1.536.879 2.121z"
+                />
+              </svg>
+              <p>Passionate</p>
+            </div>
+            <div>
+              <svg fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M13 10V3L4 14h7v7l9-11h-7z"
+                />
+              </svg>
+              <p>Determined</p>
+            </div>
+            <div>
+              <svg fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M9 12l2 2 4-4M7.835 4.697a3.42 3.42 0 001.946-.806 3.42 3.42 0 014.438 0 3.42 3.42 0 001.946.806 3.42 3.42 0 013.138 3.138 3.42 3.42 0 00.806 1.946 3.42 3.42 0 010 4.438 3.42 3.42 0 00-.806 1.946 3.42 3.42 0 01-3.138 3.138 3.42 3.42 0 00-1.946.806 3.42 3.42 0 01-4.438 0 3.42 3.42 0 00-1.946-.806 3.42 3.42 0 01-3.138-3.138 3.42 3.42 0 00-.806-1.946 3.42 3.42 0 010-4.438 3.42 3.42 0 00.806-1.946 3.42 3.42 0 013.138-3.138z"
+                />
+              </svg>
+              <p>Perseverant</p>
+            </div>
+            <div>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-6 w-6"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M3 6l3 1m0 0l-3 9a5.002 5.002 0 006.001 0M6 7l3 9M6 7l6-2m6 2l3-1m-3 1l-3 9a5.002 5.002 0 006.001 0M18 7l3 9m-3-9l-6-2m0-2v2m0 16V5m0 16H9m3 0h3"
+                />
+              </svg>
+              <p>Honest</p>
+            </div>
+          </div>
+
+          <div class="bg-clay-100 shadow-md rounded-md m-2 p-2 lg:p-6">
+            <p class="text-justify lg:text-lg text-black">
+              I have spent a lot of time working on software projects big and
+              small. I know how to navigate large codebases and make meaningful
+              contributions to them. I also have followed best-practices for my
+              new projects, and I've encountered software development
+              methodologies in a hands-on way to help me manage my own larger
+              projects.
+            </p>
+            <p class="text-justify text-black lg:text-lg">
+              Overall, I feel ready, and I hope that we can meet soon so that I
+              can show you that I am.
+            </p>
+          </div>
+          <div class="contact-form-container">
+            <div class="flex items-center justify-center w-full">
+              <button
+                hx-get="http://localhost:8001/api/contact"
+                hx-target=".contact-form-container"
+                class="
+                  p-6
+                  m-6
+                  text-clay-100
+                  font-bold
+                  text-lg
+                  rounded-md
+                  bg-gradient-to-tr
+                  from-secondary-400
+                  to-secondary-600
+                "
+              >
+                Contact Me
+              </button>
+            </div>
           </div>
         </div>
       </div>
