--- a/src/index.html
+++ b/src/index.html
@@ -726,7 +726,7 @@
           <div class="contact-form-container">
             <div class="flex items-center justify-center w-full">
               <button
-                hx-get="http://localhost:8001/api/contact"
+                hx-get="https://api.jackdevries.com/api/contact"
                 hx-target=".contact-form-container"
                 class="
                   shadow
